--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,13 @@
     <title>osm-maps Demo</title>
     <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
     <link rel="import" href="../osm-maps.html">
+    <style type="text/css">
+      html, body {
+        height: 100%;
+        width: 100%;
+        margin : 0;  
+      }
+    </style>
   </head>
   <body unresolved>
 
