implement attribute listener

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,7 @@
   <body unresolved>
 
     <p>An example of <code>&lt;osm-maps&gt;</code>:</p>
-    <osm-maps></osm-maps>
+    <osm-maps latitude="53.834089" longitude="10.703718" zoom="16"></osm-maps>
 
   </body>
 </html>
