--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
     <title>osm-maps Demo</title>
     <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
     <link rel="import" href="../osm-maps.html">
+    <link rel="import" href="../osm-marker.html">
     <link rel="import" href="../osm-layer.html">
     <style type="text/css">
       html, body {
@@ -22,9 +23,10 @@
 
       <p>An example of <code>&lt;osm-maps&gt;</code>:</p>
       <osm-maps latitude="{{ latitude }}" longitude="{{ longitude }}" zoom="16">
-      <!--  <osm-layer source="osm" visible="true"></osm-layer>
+        <osm-layer source="osm" visible="true"></osm-layer>
         <osm-layer source="hyb" visible="false"></osm-layer>
-        <osm-layer source="sat" visible="false"></osm-layer> -->
+        <osm-layer source="sat" visible="false"></osm-layer>
+        <!-- <osm-marker></osm-marker> -->
       </osm-maps>
     </template>
   </body>
