implement basic marker

--- a/demo/index.html
+++ b/demo/index.html
@@ -23,10 +23,12 @@
 
       <p>An example of <code>&lt;osm-maps&gt;</code>:</p>
       <osm-maps latitude="{{ latitude }}" longitude="{{ longitude }}" zoom="16">
-        <osm-layer source="osm" visible="true"></osm-layer>
+        <!-- <osm-layer source="osm" visible="true"></osm-layer>
         <osm-layer source="hyb" visible="false"></osm-layer>
-        <osm-layer source="sat" visible="false"></osm-layer>
-        <!-- <osm-marker></osm-marker> -->
+        <osm-layer source="sat" visible="false"></osm-layer> -->
+        <osm-marker longitude="10.703718" latitude="53.834089" scale="0.2" image="../data/marker-blue-shadow.png"></osm-marker>
+        <osm-marker longitude="10.705318" latitude="53.835789" image="../data/marker-green-icon-shadow.png"></osm-marker>
+        <osm-marker longitude="10.702318" latitude="53.832789" image="../data/marker-red.png"></osm-marker>
       </osm-maps>
     </template>
   </body>
