--- a/osm-maps.html
+++ b/osm-maps.html
@@ -10,7 +10,7 @@ An open street map element based on polymer 1.0 .
 @demo demo/index.html
 -->
 
-<dom-module id="osm-maps">
+<dom-module id="osm-map">
   <template>
     <style>
       :host {
@@ -32,7 +32,7 @@ An open street map element based on polymer 1.0 .
 
   <script>
     Polymer({
-      is: 'osm-maps',
+      is: 'osm-map',
 
       properties: {
 
