start adding default marker

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,6 +29,7 @@
         <osm-marker longitude="10.703718" latitude="53.834089" scale="0.2" image="../data/marker-blue-shadow.png"></osm-marker>
         <osm-marker longitude="10.705318" latitude="53.835789" image="../data/marker-green-icon-shadow.png"></osm-marker>
         <osm-marker longitude="10.702318" latitude="53.832789" image="../data/marker-red.png"></osm-marker>
+        <osm-marker longitude="10.705318" latitude="53.830789"></osm-marker>
       </osm-maps>
     </template>
   </body>
