add default polymarker close #1

--- a/demo/index.html
+++ b/demo/index.html
@@ -30,6 +30,7 @@
         <osm-marker longitude="10.705318" latitude="53.835789" image="../data/marker-green-icon-shadow.png"></osm-marker>
         <osm-marker longitude="10.702318" latitude="53.832789" image="../data/marker-red.png"></osm-marker>
         <osm-marker longitude="10.705318" latitude="53.830789"></osm-marker>
+        <osm-marker longitude="10.709318" latitude="53.839789" scale="2.5"></osm-marker>
       </osm-map>
     </template>
   </body>
