--- a/osm-map.html
+++ b/osm-map.html
@@ -72,7 +72,8 @@ The `osm-map` element renders a OpenStreetMap.
           type: Number,
           value: 12,
           notify: true,
-          observer: '_setZoom'
+          observer: '_setZoom',
+          reflectToAttribute: true
         }
       },
 
@@ -98,7 +99,7 @@ The `osm-map` element renders a OpenStreetMap.
         if(layers.length <= 0)
           layers.push( new ol.layer.Tile({ source: new ol.source.OSM() }) );
 
-        this.map = map = new ol.Map({
+        this.map = new ol.Map({
           layers: layers,
           target: 'map',
           controls: ol.control.defaults({
@@ -112,12 +113,25 @@ The `osm-map` element renders a OpenStreetMap.
 
         this.map.getView().setCenter(ol.proj.fromLonLat([this.longitude, this.latitude]));
 
+        self = this;
+        // Update zoom property if map resolution change
+        this.map.getView().on('change:resolution', function() {
+          self.zoom = self.map.getView().getZoom();
+        });
+
+        // Update position properties if map center change
+        this.map.getView().on('change:center', function() {
+          var centerLonLat = ol.proj.transform(self.map.getView().getCenter(), 'EPSG:3857', 'EPSG:4326');
+          self.longitude = centerLonLat[0];
+          self.latitude = centerLonLat[1];
+        });
+
         $.each(this.queryAllEffectiveChildren('osm-marker'), function(index, marker) {
-          map.addLayer( marker.getOsmMarker() );
+          self.map.addLayer( marker.getOsmMarker() );
         });
 
         $.each(this.queryAllEffectiveChildren('osm-poly'), function(index, poly) {
-          map.addLayer( poly.polygon() );
+          self.map.addLayer( poly.polygon() );
         });
       },
 
@@ -126,7 +140,6 @@ The `osm-map` element renders a OpenStreetMap.
        * if window size changed.
        */
       resize: function() {
-        console.log("called")
         if (this.map)
           this.map.updateSize();
       },
