--- a/osm-poly.html
+++ b/osm-poly.html
@@ -39,20 +39,16 @@ An open street map element based on polymer 1.0 .
       },
 
       polygon: function() {
-      
         points = [];
         $.each(this.queryAllEffectiveChildren('osm-point'), function(index, point) {
           points.push(point.position());
+
+          if(this.fill && index == this.queryAllEffectiveChildren('osm-point').length)
+            points.push(this.queryAllEffectiveChildren('osm-point')[0].position());
         });
 
         geometry = new ol.geom.LineString(points, 'XY');
 
-        if(this.fill) {
-          points.push(this.queryAllEffectiveChildren('osm-point')[0].position());
-
-          geometry = new ol.geom.Polygon([points], 'XY');
-        }
-        
         // need to transfrom the lineString described in 
         // https://groups.google.com/forum/#!topic/ol3-dev/TqLw0RRJLXw
         geometry.transform('EPSG:4326', 'EPSG:3857');
